infrastructure/k8s/fastApi_diployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-loader-api
  namespace: itaifuchs-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-loader-api
  template:
    metadata:
      labels:
        app: data-loader-api
    spec:
      containers:
        - name: api
          image: itaifuchs/data-loader-api:mongodb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "500m"
              memory: 512Mi
