infrastructure/k8s/mongo_diployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: y0583275590-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: bitnami/mongodb:7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /bitnami/mongodb
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -ec
                - >
                  /opt/bitnami/mongodb/bin/mongosh --quiet --eval "db.adminCommand({ ping: 1 })"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -ec
                - >
                  /opt/bitnami/mongodb/bin/mongosh --quiet --eval "db.adminCommand({ ping: 1 })"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongodb-pvc
