infrastructure/k8s/fastApi_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-loader-api
  namespace: itaifuchs-dev
spec:
  selector:
    app: datacd -loader-api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  type: ClusterIP
