infrastructure/k8s/mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: y0583275590-dev
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
