infrastructure/k8s/fastApi_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-loader-api
  namespace: itaifuchs-dev
spec:
  to:
    kind: Service
    name: data-loader-api
  port:
    targetPort: http
  tls:
    termination: edge
